--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.hikari.maximum-pool-size=5
-server.port=8082
+spring.datasource.hikari.maximum-pool-size=5 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=podichervupavansai@gmail.com
+spring.mail.password=kieh avrc fkrq xlsh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
