--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.hikari.maximum-pool-size=5 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=***
-spring.mail.password=***
+spring.mail.username=podichervupavansai@gmail.com
+spring.mail.password=loxk geog dtwf wdrh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.datasource.hikari.maximum-pool-size=5
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
