application.properties file modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.hikari.maximum-pool-size=5 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=podichervupavansai@gmail.com
-spring.mail.password=loxk geog dtwf wdrh
+spring.mail.username=*****
+spring.mail.password=*****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size=2MB
