--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/ams
+#spring.datasource.url= jdbc:postgresql://106.51.76.167:5432/ams
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
