--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=***
-spring.mail.password=***
+spring.mail.username=sandeepchvn24@gmail.com
+spring.mail.password=dphm uazl ithu htqk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.hikari.maximum-pool-size=5
