--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=***
-spring.mail.password=***
+spring.mail.username=swiftshoppapp@gmail.com
+spring.mail.password=hcev wxoy hwbw jike
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.hikari.maximum-pool-size=5
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-
