--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.hikari.maximum-pool-size=5
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+
+file.upload-dir=C:/Users/AMS/Documents
